Trabalhando com CSS

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Meu Perfil</title>
 </head>
-<body>
-    <ul>
+
+<body class="cor">
+    <ul id="menu">
         <li>
             <a href="index.html">Home</a>
         </li>
@@ -14,20 +16,79 @@
             <a href="contato.html">Contato</a>
         </li>
     </ul>
-    <h1>Sobre a Fabyola</h1>
-    <p>Tenho 18 anos e atualmente estou cursando análise e desenvolvimento de sistema, moro na Cidade de Virgem da Lapa, Estado de Minas Gerais, Vale do Jequitinhonha. Na escola adorava solucionar problemas de matemática e ajudar meus colegas com os mesmos, apesar de ser tímida sempre gostei de participar dos projetos escolares como teatro, dança, seminário também já fui representante de classe e aluna destaque.</p> 
-    <p>Aos 16 anos fiz parte da primeira turma de formação de guarda mirim da minha cidade. A guarda me proporcionou muitas coisas, como disciplina, responsabilidade a oportunidade de participar de trabalhos voluntários e o meu primeiro emprego de jovem aprendiz como auxiliar de recepção onde tive minha primeira experiência de atendimento ao público e desenvolvi habilidades comunicativas. Gosto muito de experimentar coisas novas até mesmo já prestei o exército.</p>
-    <p>Durante pandemia fiz cursos de diversas áreas até encontrar OTechTaOn  o curso que despertou o meu amor pela tecnologia, nele aprendi front-end e desenvolvi habilidades comportamentais e ao final do curso pude colocar tudo em prática no desenvolvimento de uma Landing page juntamente com o meu grupo. Esse ano tive a oportunidade de fazer parte da Generation em um bootcamp de uma jornada intensa com mais de 400 horas no período de 3 meses. desenvolvi habilidades técnicas como React, Java, Spring Framework, Metodologia Ágil Scrum, dentre outras que você pode encontrar no meu currículo, também pude aperfeiçoar minhas habilidades comportamentais, como comunicação, trabalho em equipe, persistência e produtividade botando tudo em prática nos trabalhos em grupos e ao final do bootcamp consegui a minha tão sonhada formação como Desenvolvedora Web Java Fullstack Júnior.</p>
 
-    <img src="assets/img/avatar.jpeg" alt="Avatar da criadora desse conteúdo">
+    <hr>
 
-    <h2>Meu Video</h2>
-    <iframe 
-    width="560" 
-    height="315" 
-    src="https://www.youtube.com/embed/2vUMaDeDIo8" title="YouTube video player" frameborder="0" 
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-    allowfullscreen
-    ></iframe>
+    <p class="center"> 
+        <img src="https://readme-typing-svg.herokuapp.com?color=FF36F3&size=28&center=true&vCenter=true&lines=Sobre+a+Fabyola"(https://git.io/typing-svg)>
+     </p>
+    
+    <div class="container">
+        <div>
+            <img class="imagem" src="https://user-images.githubusercontent.com/92693153/143438192-e48f8c22-82d0-4a0e-9279-7c9a890aafed.png" alt="Avatar da criadora desse conteúdo">
+        </div>
+        <div class="p-30">   
+            <p class="justify">
+                Tenho 18 anos e atualmente estou cursando análise e desenvolvimento de sistema, moro na Cidade de Virgem da Lapa, Estado de Minas Gerais, Vale do Jequitinhonha. Na escola adorava solucionar problemas de matemática e ajudar meus colegas com os mesmos, apesar de ser tímida sempre gostei de participar dos projetos escolares como teatro, dança, seminário também já fui representante de classe e aluna destaque.
+            </p> 
+            <p class="justify">
+                Aos 16 anos fiz parte da primeira turma de formação de guarda mirim da minha cidade. A guarda me proporcionou muitas coisas, como disciplina, responsabilidade a oportunidade de participar de trabalhos voluntários e o meu primeiro emprego de jovem aprendiz como auxiliar de recepção onde tive minha primeira experiência de atendimento ao público e desenvolvi habilidades comunicativas.
+            </p>
+            <p class="justify">
+                Gosto muito de experimentar coisas novas até mesmo já prestei o exército. Durante pandemia fiz cursos de diversas áreas até encontrar OTechTaOn  o curso que despertou o meu amor pela tecnologia, nele aprendi front-end e desenvolvi habilidades comportamentais e ao final do curso pude colocar tudo em prática no desenvolvimento de uma Landing page juntamente com o meu grupo.
+            </p>
+            <p class="justify">
+                Esse ano tive a oportunidade de fazer parte da Generation em um bootcamp de uma jornada intensa com mais de 400 horas no período de 3 meses. desenvolvi habilidades técnicas como React, Java, Spring Framework, Metodologia Ágil Scrum, dentre outras que você pode encontrar no meu currículo, também pude aperfeiçoar minhas habilidades comportamentais, como comunicação, trabalho em equipe, persistência e produtividade botando tudo em prática nos trabalhos em grupos e ao final do bootcamp consegui a minha tão sonhada formação como Desenvolvedora Web Java Fullstack Júnior.
+            </p>
+        </div>
+    </div>
+
+    <div class="center">
+        <h2>Tecnologias que eu uso no meu dia</h2>
+            <div style="display: inline_block">
+                <img align="center" alt="html5" src="https://img.shields.io/badge/HTML5-ff95be?style=for-the-badge&logo=html5&logoColor=white" />
+                <img align="center" alt="css3" src="https://img.shields.io/badge/CSS3-ff95be?style=for-the-badge&logo=css3&logoColor=white" />
+                <img align="center" alt="js" src="https://img.shields.io/badge/JavaScript-ff95be?style=for-the-badge&logo=javascript&logoColor=black" />
+                <img align="center" alt="js" src="https://img.shields.io/badge/Java-ff95be?style=for-the-badge&logo=java&logoColor=white" />
+                <img align="center" alt="mysql" src="https://img.shields.io/badge/MySQL-ff95be?style=for-the-badge&logo=mysql&logoColor=white" />
+                <img align="center" alt="c++" src="https://img.shields.io/badge/C%2B%2B-ff95be?style=for-the-badge&logo=c%2B%2B&logoColor=white" />
+                <img align="center" alt="spring" src="https://img.shields.io/badge/Spring-ff95be?style=for-the-badge&logo=spring&logoColor=white" />
+                <img align="center" alt="git" src="https://img.shields.io/badge/GIT-ff95be?style=for-the-badge&logo=git&logoColor=white" />
+            </div>
+    </div>
+
+    <h2 class="center padding">Confira meu jogo no Scratch</h2>
+    <div class="container">
+        <iframe src="https://scratch.mit.edu/projects/630942081/embed" allowtransparency="true" width="400" height="352" frameborder="0" scrolling="no" allowfullscreen></iframe>
+    </div>
+
+    <h2 class="center padding">Meu Meetup</h2>
+    <div class="container mb-50">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/2vUMaDeDIo8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+    <hr>
+
+    <footer>
+        <div class="container">
+            <a href="https://m.facebook.com/fabyola.campos.54">
+                <img class="tm-social p-30" src="assets/img/facebook.png" alt="Logo do facebook">
+            </a>
+            <a href="https://www.instagram.com/fabyolacampos/?hl=pt-br">
+                <img class="tm-social p-30" src="assets/img/instagram.png" alt="Logo do instagram">
+            </a>
+            <a href="https://www.linkedin.com/in/fabyola-campos">
+                <img class="tm-social p-30" src="assets/img/logotipo-do-linkedin.png" alt="Logo do linkedin">
+            </a>
+            <a href="https://github.com/fabyolafc">
+                <img class="tm-social p-30" src="assets/img/github.png" alt="Logo do github">
+            </a>
+
+        </div>
+            <p class="center">
+                Todos os direitos reservados: &copy Fabyola Campos
+            </p>
+    </footer>
+
 </body>
 </html>
