--- a/contato.html
+++ b/contato.html
@@ -3,33 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Contato</title>
 </head>
-<body>
-    <ul>
+<body class="cor">
+    <ul id="menu">
         <li>
             <a href="index.html">Home</a>
         </li>
         <li>
             <a href="contato.html">Contato</a>
         </li>
+
     </ul>
-    <h1>Entre em contato comigo</h1>
+    
+    <hr>
 
-    <form>
-        <label for="nome">Nome:</label>
-        <input type="text" id="nome">
-        <br><br>
-        <label for="email">E-mail:</label>
-        <input type="email" id="email">
-        <br><br>
-        <label for="assunto">Assunto:</label>
-        <textarea name="assunto" id="assuto" cols="60" rows="5"></textarea>
-        <br><br>
-        <button>Enviar</button>
+    <h1 class="center">Entre em contato comigo</h1>
 
-        <h2>Endereço</h2>
+    <div class="container mb-50">
+        <div>
+            <form>
+                <label for="nome">Nome:</label>
+                <input type="text" id="nome">
+                <br><br>
+                <label for="email">E-mail:</label>
+                <input type="email" id="email">
+                <br><br>
+                <label for="assunto">Assunto:</label>
+                <textarea name="assunto" id="assuto" cols="60" rows="5"></textarea>
+                <br><br>
+                <button>Enviar</button>
+            </form>
+        </div>
+        
+        <div class="ml-50">
+
+        </div>
+
+        <div>    
         <p>Virgem da Lapa</p>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15277.769279488444!2d-42.34939452791814!3d-16.80439902340176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x74d69da92c75f21%3A0xfba25ad8614b1559!2sVirgem%20da%20Lapa%2C%20MG%2C%2039630-000!5e0!3m2!1spt-BR!2sbr!4v1655837217425!5m2!1spt-BR!2sbr" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </div>
+
+    <hr>
+
+    <footer>
+        <div class="container">
+            <a href="https://m.facebook.com/fabyola.campos.54">
+                <img class="tm-social p-30" src="assets/img/facebook.png" alt="Logo do facebook">
+            </a>
+            <a href="https://www.instagram.com/fabyolacampos/?hl=pt-br">
+                <img class="tm-social p-30" src="assets/img/instagram.png" alt="Logo do instagram">
+            </a>
+            <a href="https://www.linkedin.com/in/fabyola-campos">
+                <img class="tm-social p-30" src="assets/img/logotipo-do-linkedin.png" alt="Logo do linkedin">
+            </a>
+            <a href="https://github.com/fabyolafc">
+                <img class="tm-social p-30" src="assets/img/github.png" alt="Logo do github">
+            </a>
+
+        </div>
+            <p class="center">
+                Todos os direitos reservados: &copy Fabyola Campos
+            </p>
+    </footer>
+
 </body>
 </html>
