Trabalhando com js

--- a/contato.html
+++ b/contato.html
@@ -24,18 +24,22 @@
     <div class="container mb-50">
         <div>
             <form>
-                <label for="nome">Nome:</label>
-                <input type="text" id="nome">
-                <br><br>
-                <label for="email">E-mail:</label>
-                <input type="email" id="email">
-                <br><br>
-                <label for="assunto">Assunto:</label>
-                <textarea name="assunto" id="assuto" cols="60" rows="5"></textarea>
-                <br><br>
-                <button>Enviar</button>
+               <label for="nome">Nome:</label> <br>
+               <input name="nome" type="text" id="nome" onkeyup='validaNome()'>
+               <div id='txtNome'></div>
+               <br>
+               <label for="email">E-mail:</label> <br>
+               <input name="email" type="email" id="email" onkeyup='validaEmail()'>
+               <div id='txtEmail'></div>
+               <br>
+               <label for="assunto">Assunto:</label> <br>
+               <textarea name="assunto" id="assunto" cols="60" rows="5" onkeyup="validaAssunto()"></textarea>
+               <div id='txtAssunto'></div>
+               <br>
+               <br>
+               <button onclick="enviar()" >Enviar</button>
             </form>
-        </div>
+         </div>
         
         <div class="ml-50">
 
@@ -43,7 +47,7 @@
 
         <div>    
         <p>Virgem da Lapa</p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15277.769279488444!2d-42.34939452791814!3d-16.80439902340176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x74d69da92c75f21%3A0xfba25ad8614b1559!2sVirgem%20da%20Lapa%2C%20MG%2C%2039630-000!5e0!3m2!1spt-BR!2sbr!4v1655837217425!5m2!1spt-BR!2sbr" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15277.769279488444!2d-42.34939452791814!3d-16.80439902340176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x74d69da92c75f21%3A0xfba25ad8614b1559!2sVirgem%20da%20Lapa%2C%20MG%2C%2039630-000!5e0!3m2!1spt-BR!2sbr!4v1655837217425!5m2!1spt-BR!2sbr" width="400" height="250" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" onmousemove="mapaZoom()" onmouseout="mapaNormal()" id='mapa' loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div>
 
@@ -69,6 +73,8 @@
                 Todos os direitos reservados: &copy Fabyola Campos
             </p>
     </footer>
+
+    <script src="assets/js/script.js"></script>
 
 </body>
 </html>
